@@ -9,6 +9,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -95,15 +96,6 @@ public class SaleServiceImpl implements SaleService {
 	@Override
 	public void submitSale(Sale sale) throws SQLException {
 		Employee loggedInEmployee = employeeService.getLoggedInEmployee();
-		DiscountCode discountCode = null;
-		if (sale.getDiscountCodeCode() != null) {
-			discountCode = discountDao.selectDiscountCode(sale.getDiscountCodeCode());
-			if (discountCode == null) {
-				throw new DomainObjectNotFoundException("discountCodeCode", "Несъществуващ код за намаление.");
-			} else {
-				sale.setDiscountCodeId(discountCode.getId());
-			}
-		}
 		
 		sale.setEmployeeId(loggedInEmployee.getId());
 		sale.setStoreId(loggedInEmployee.getStoreId());
@@ -111,7 +103,7 @@ public class SaleServiceImpl implements SaleService {
 		
 		Integer saleId = saleDao.insertSale(sale);
 		
-		saveSaleItems(sale, loggedInEmployee, discountCode, saleId);
+		saveSaleItems(sale, loggedInEmployee, saleId);
 		
 	}
 
@@ -180,28 +172,135 @@ public class SaleServiceImpl implements SaleService {
 		}
 	}
 
-	private BigDecimal calculcateAmountDiscountValuePrice(BigDecimal priceBeforeDiscount, BigDecimal discountValueAmount) {
-		BigDecimal salePrice;
-		if (discountValueAmount.compareTo(BigDecimal.ZERO) > 0) {
-			if (discountValueAmount.compareTo(priceBeforeDiscount) >= 0) {
-				salePrice = BigDecimal.ZERO;			
-			} else {
-				salePrice = priceBeforeDiscount.subtract(discountValueAmount);
-				discountValueAmount = BigDecimal.ZERO;
+	private void saveSaleItems(Sale sale, Employee loggedInEmployee, Integer saleId) {
+		List<SaleItem> saleItems = sale.getSaleItems();
+		saveSaleItemsWithoutDiscount(sale, loggedInEmployee, saleId, saleItems);
+		
+		List<SaleItem> percentageDiscounTypeItems = saleItems.stream()
+				.filter(item -> "PERCENTAGE".equals(item.getDiscountType())).collect(Collectors.toList());
+		saveSaleItemsWithPercentageDiscount(sale, loggedInEmployee, saleId, percentageDiscounTypeItems);
+				
+		List<SaleItem> amountDiscounTypeItems = saleItems.stream()
+				.filter(item -> "AMOUNT".equals(item.getDiscountType())).collect(Collectors.toList());
+		saveSaleItemsWithAmountDiscount(sale, loggedInEmployee, saleId, amountDiscounTypeItems);
+		
+		List<SaleItem> bundleDiscounTypeItems = saleItems.stream()
+				.filter(item -> "BUNDLE".equals(item.getDiscountType())).collect(Collectors.toList());
+		saveSaleItemsWithBundleDiscount(sale, loggedInEmployee, saleId, bundleDiscounTypeItems);
+	}
+
+	private void saveSaleItemsWithBundleDiscount(Sale sale, Employee loggedInEmployee, Integer saleId,
+			List<SaleItem> bundleDiscounTypeItems) {
+		if (!bundleDiscounTypeItems.isEmpty()) {
+			LinkedHashMap<Integer, List<SaleItem>> bundledGroupedByDiscountCode = bundleDiscounTypeItems.stream()
+					.collect(Collectors.groupingBy(SaleItem::getDiscountCode, LinkedHashMap::new, Collectors.toList()));
+			
+			for (Integer discountCode : bundledGroupedByDiscountCode.keySet()) {
+				List<SaleItem> bundle = bundledGroupedByDiscountCode.get(discountCode);
+				
+				for (SaleItem saleItem : bundle) {
+					saleItem.setSaleId(saleId);
+					BigDecimal itemPrice = itemDao.getItemPriceByStoreId(saleItem.getItemId(), sale.getStoreId());
+					saleItem.setItemPrice(itemPrice);
+				}
+				
+		        List<SaleItem> bundleSortedByPrice = bundle.stream()
+		    			.sorted(Comparator.comparing(SaleItem::getItemPrice, Comparator.reverseOrder()))
+		    			.collect(Collectors.toList());
+				
+				String discountValueAmount = bundleSortedByPrice.get(0).getDiscountValue();
+				List<String> bundleDiscountValues = Arrays.asList(discountValueAmount.split(";"));
+				
+				int bundleDiscountCounter = 0;
+				
+				for (int i = 0; i < bundleSortedByPrice.size(); i++) {
+					SaleItem saleItem = bundleSortedByPrice.get(i);
+					if (bundleSortedByPrice.size() - (i + 1) < bundleDiscountValues.size()) {
+						BigDecimal discountValue = new BigDecimal(bundleDiscountValues.get(bundleDiscountCounter++));
+						BigDecimal salePrice = calculcatePercentageDiscountValuePrice(saleItem.getItemPrice(), discountValue);
+						saleItem.setSalePrice(salePrice);
+					} else {
+						saleItem.setSalePrice(saleItem.getItemPrice());
+					}
+					
+					saleDao.insertSaleItem(saleItem);
+					stockService.updateTheQuantitiyOfSoldStock(saleItem.getItemId(), loggedInEmployee.getStoreId());
+				}
 			}
-		} else {
-			salePrice = priceBeforeDiscount;
+		}
+	}
+
+	private void saveSaleItemsWithAmountDiscount(Sale sale, Employee loggedInEmployee, Integer saleId,
+			List<SaleItem> amountDiscounTypeItems) {
+		for (SaleItem saleItem : amountDiscounTypeItems) {
+			saleItem.setSaleId(saleId);
+			BigDecimal itemPrice = itemDao.getItemPriceByStoreId(saleItem.getItemId(), sale.getStoreId());
+			saleItem.setItemPrice(itemPrice);
+
+			BigDecimal salePrice = calculcateAmountDiscountValuePrice(itemPrice, new BigDecimal(saleItem.getDiscountValue()));
+			saleItem.setSalePrice(salePrice);
+
+			saleDao.insertSaleItem(saleItem);
+			stockService.updateTheQuantitiyOfSoldStock(saleItem.getItemId(), loggedInEmployee.getStoreId());
+		}
+	}
+
+	private void saveSaleItemsWithPercentageDiscount(Sale sale, Employee loggedInEmployee, Integer saleId,
+			List<SaleItem> percentageDiscounTypeItems) {
+		for (SaleItem saleItem : percentageDiscounTypeItems) {
+			saleItem.setSaleId(saleId);
+			BigDecimal itemPrice = itemDao.getItemPriceByStoreId(saleItem.getItemId(), sale.getStoreId());
+			saleItem.setItemPrice(itemPrice);
+
+			BigDecimal salePrice = calculcatePercentageDiscountValuePrice(itemPrice, new BigDecimal(saleItem.getDiscountValue()));
+			saleItem.setSalePrice(salePrice);
+
+			saleDao.insertSaleItem(saleItem);
+			stockService.updateTheQuantitiyOfSoldStock(saleItem.getItemId(), loggedInEmployee.getStoreId());
+		}
+	}
+
+	private void saveSaleItemsWithoutDiscount(Sale sale, Employee loggedInEmployee, Integer saleId,
+			List<SaleItem> saleItems) {
+		for (SaleItem saleItem : saleItems) {
+			if (saleItem.getDiscountCode() == null) {
+				saleItem.setSaleId(saleId);
+				BigDecimal itemPrice = itemDao.getItemPriceByStoreId(saleItem.getItemId(), sale.getStoreId());
+				saleItem.setItemPrice(itemPrice);
+				saleItem.setSalePrice(itemPrice);
+				
+				saleDao.insertSaleItem(saleItem);
+				stockService.updateTheQuantitiyOfSoldStock(saleItem.getItemId(), loggedInEmployee.getStoreId());
+			} else {
+				DiscountCode discountCode = discountDao.selectDiscountCode(saleItem.getDiscountCode());
+				if (discountCode == null) {
+					throw new DomainObjectNotFoundException("discountCodeCode", "Несъществуващ код за намаление.");
+				} else {
+					saleItem.setDiscountCodeId(discountCode.getId());
+					saleItem.setDiscountValue(discountCode.getDiscountValue());
+					saleItem.setDiscountType(discountCode.getDiscountTypeCode());
+				}
+
+			}
+		}
+	}
+	
+	private BigDecimal calculcateAmountDiscountValuePrice(BigDecimal priceBeforeDiscount, BigDecimal discountValueAmount) {
+		BigDecimal salePrice = priceBeforeDiscount.subtract(discountValueAmount);
+		if (salePrice.compareTo(BigDecimal.ZERO) > 0) {
+			return salePrice;
 		}
 		
-		return salePrice;
+		return BigDecimal.ZERO;
 	}
 
 	private BigDecimal calculcatePercentageDiscountValuePrice(BigDecimal priceBeforeDiscount, BigDecimal discountValueAmount) {
-		BigDecimal ONE_HUNDRED = new BigDecimal(100);
-		BigDecimal salePrice = priceBeforeDiscount.multiply(ONE_HUNDRED.subtract(discountValueAmount))
-				.divide(ONE_HUNDRED);
-		salePrice = salePrice.setScale(2, RoundingMode.HALF_UP);
-		return salePrice;
+		return priceBeforeDiscount.multiply(ONE_HUNDRED.subtract(discountValueAmount))
+				.divide(ONE_HUNDRED).setScale(2, RoundingMode.HALF_UP);
+	}
+	
+	private BigDecimal calculcatePercentageDiscount(BigDecimal priceBeforeDiscount, BigDecimal discountValueAmount) {
+		return priceBeforeDiscount.multiply(discountValueAmount).divide(ONE_HUNDRED).setScale(2, RoundingMode.HALF_UP);
 	}
 
 	@Override
@@ -339,6 +438,76 @@ public class SaleServiceImpl implements SaleService {
 	}
 
 	@Override
+	public TotalSumReport calculateTotalSum(List<SaleItem> selectedSaleItems) {
+		TotalSumReport totalSumReport = new TotalSumReport();
+		
+		selectedSaleItems.stream().forEach(item -> {System.out.println(item.getItemPrice());});
+		
+		BigDecimal totalSum = selectedSaleItems.stream().map(SaleItem::getItemPrice)
+				.reduce(BigDecimal.ZERO, BigDecimal::add);
+		totalSumReport.setTotalSum(totalSum);		
+		BigDecimal discount = BigDecimal.ZERO;
+		
+		List<SaleItem> percentageDiscounTypeItems = selectedSaleItems.stream()
+				.filter(item -> "PERCENTAGE".equals(item.getDiscountType())).collect(Collectors.toList());
+		if (!percentageDiscounTypeItems.isEmpty()) {
+			BigDecimal percentageDiscount = percentageDiscounTypeItems.stream()
+					.map(item -> calculcatePercentageDiscount(item.getItemPrice(), new BigDecimal(item.getDiscountValue())))
+					.reduce(BigDecimal.ZERO, BigDecimal::add);
+			discount = discount.add(percentageDiscount);
+		}
+ 		
+		List<SaleItem> amountDiscounTypeItems = selectedSaleItems.stream()
+				.filter(item -> "AMOUNT".equals(item.getDiscountType())).collect(Collectors.toList());
+		if (!amountDiscounTypeItems.isEmpty()) {
+			BigDecimal amountTotalSum = amountDiscounTypeItems.stream().map(SaleItem::getItemPrice)
+					.reduce(BigDecimal.ZERO, BigDecimal::add);
+			BigDecimal amountDiscount = amountDiscounTypeItems.stream().map(item -> new BigDecimal(item.getDiscountValue()))
+					.reduce(BigDecimal.ZERO, BigDecimal::add);
+			if (amountTotalSum.compareTo(amountDiscount) < 0) {
+				discount = discount.add(amountTotalSum);
+			} else {
+				discount = discount.add(amountDiscount);
+			}
+		}
+		
+		List<SaleItem> bundleDiscounTypeItems = selectedSaleItems.stream()
+				.filter(item -> "BUNDLE".equals(item.getDiscountType())).collect(Collectors.toList());
+		if (!bundleDiscounTypeItems.isEmpty()) {
+			BigDecimal totalBundleDiscount = BigDecimal.ZERO;
+			LinkedHashMap<Integer, List<SaleItem>> bundledGroupedByDiscountCode = bundleDiscounTypeItems.stream()
+					.collect(Collectors.groupingBy(SaleItem::getDiscountCode, LinkedHashMap::new, Collectors.toList()));
+			
+			for (Integer discountCode : bundledGroupedByDiscountCode.keySet()) {
+				List<SaleItem> bundle = bundledGroupedByDiscountCode.get(discountCode);
+				
+		        List<SaleItem> bundleSortedByPrice = bundle.stream()
+		    			.sorted(Comparator.comparing(SaleItem::getItemPrice, Comparator.reverseOrder()))
+		    			.collect(Collectors.toList());
+				
+				String discountValueAmount = bundleSortedByPrice.get(0).getDiscountValue();
+				List<String> bundleDiscountValues = Arrays.asList(discountValueAmount.split(";"));
+				
+				int bundleDiscountCounter = 0;
+				
+				for (int i = 0; i < bundleSortedByPrice.size(); i++) {
+					if (bundleSortedByPrice.size() - (i + 1) < bundleDiscountValues.size()) {
+						BigDecimal discountValue = new BigDecimal(bundleDiscountValues.get(bundleDiscountCounter++));
+						totalBundleDiscount = totalBundleDiscount.add(calculcatePercentageDiscount(bundleSortedByPrice.get(i).getItemPrice(), discountValue));
+					}
+				}
+			}
+			
+			discount = discount.add(totalBundleDiscount);
+		}
+		
+		totalSumReport.setDiscount(discount);
+		totalSumReport.setTotalSumAfterDiscount(totalSum.subtract(discount));
+		
+		return totalSumReport;
+	}
+	
+	@Override
 	public TotalSumReport calculateTotalSum(TotalSumRequest totalSumRequest) {
 		TotalSumReport totalSumReport = new TotalSumReport();
 		
@@ -346,9 +515,11 @@ public class SaleServiceImpl implements SaleService {
 		totalSumReport.setTotalSum(totalSum);
 		totalSumReport.setTotalSumAfterDiscount(totalSum);
 		
+		DiscountCode discountCode = null;
 		if (totalSumRequest.getDiscountCode() != null) {
-			DiscountCode discountCode = discountDao.selectDiscountCode(totalSumRequest.getDiscountCode());
-			
+			discountCode = discountDao.selectDiscountCode(totalSumRequest.getDiscountCode());
+		}
+		if (discountCode != null) {					
 			BigDecimal totalSumAfterDiscount = BigDecimal.ZERO;
 			if ("PERCENTAGE".equals(discountCode.getDiscountTypeCode())) {
 				totalSumAfterDiscount = calculcatePercentageDiscountValuePrice(totalSum, new BigDecimal(discountCode.getDiscountValue())); 
@@ -404,7 +575,7 @@ public class SaleServiceImpl implements SaleService {
 	@Override
 	public PastPeriodSaleReport searchSalesForPastPeriodsByStores(String month) {
 		PastPeriodSaleReport report = new PastPeriodSaleReport();
-		int selectedMonth = new Integer(month.split("-")[0]);
+		int selectedMonth = Integer.valueOf(month.split("-")[0]);
 		
 		int currentYear = Calendar.getInstance(timeZone).get(Calendar.YEAR);
 		int currentMonth = Calendar.getInstance(timeZone).get(Calendar.MONTH);
